--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -172,3 +172,12 @@
   --progress-bar-color: none;
   --progress-bar-height: 0px;
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
