about section edited

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
+    --popover: 195, 36.36%, 4.31%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
@@ -44,7 +44,7 @@
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    --accent: 195, 36.36%, 4.31%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -82,7 +82,7 @@
   --secondary-foreground: 33, 100%, 96%;
   --muted: 51 100% 20%;
   --muted-foreground: 344 73% 70%;
-  --accent: 344 44% 62%;
+  --accent: 195, 36.36%, 4.31%;
   --accent-foreground: 33, 100%, 96%;
   --destructive: 0 85% 60%;
   --destructive-foreground: 2.31, 50.49%, 40.39%;
